[gd_scene load_steps=13 format=2]

[ext_resource path="res://font/Times Turkish Transcription.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://kod/Alistirma(CoktanSecmeli).gd" type="Script" id=2]
[ext_resource path="res://font/Crickhollow Demo.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ses/528865__eponn__beep-1.wav" type="AudioStream" id=4]
[ext_resource path="res://ses/483598__raclure__wrong.wav" type="AudioStream" id=5]
[ext_resource path="res://resim/geri.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "Dogru"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("DogruPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.945098, 0.760784, 0.0352941, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DogruPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Dogru:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SorulanKelime:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 24 ), Vector2( 5, 24 ), Vector2( 0, 24 ), Vector2( -5, 24 ), Vector2( 0, 24 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Yanlis"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("YanlisPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.32549, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YanlisPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Yanlis:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SorulanKelime:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 24 ), Vector2( 5, 24 ), Vector2( 0, 24 ), Vector2( -5, 24 ), Vector2( 0, 24 ) ]
}

[node name="Alistirma(ŞıklıSorular)" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 640.0
margin_bottom = 320.0

[node name="YanlisPanel" type="Panel" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 320.0

[node name="DogruPanel" type="Panel" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 320.0

[node name="SoslukKelimeYok" type="Label" parent="."]
visible = false
margin_left = 56.0
margin_top = 96.0
margin_right = 586.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 3 )
text = "Sözlükte dört veya dörtten fazla kelime olmalı !
   Anamenüye dönüp \" Kelime Ekle / Çıkar \" a basıp kelime ekleyebilirsin  "
align = 1
valign = 1

[node name="SorulanKelime" type="Label" parent="."]
margin_top = 24.0
margin_right = 640.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 320, 0 )
custom_colors/font_color = Color( 0.564706, 0.666667, 0.827451, 1 )
custom_colors/font_outline_modulate = Color( 0.564706, 0.666667, 0.827451, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="Soru" type="Label" parent="."]
margin_top = 62.0
margin_right = 640.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 320, 0 )
custom_colors/font_color = Color( 0.458824, 0.247059, 0.145098, 1 )
custom_colors/font_outline_modulate = Color( 0.458824, 0.247059, 0.145098, 1 )
custom_fonts/font = SubResource( 1 )
text = "Yukardaki kelimenin türkçesi şıklardan hangisidir ?"
align = 1
valign = 1

[node name="A" type="Button" parent="."]
margin_left = 96.0
margin_top = 112.0
margin_right = 544.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 2 )
text = "A) "
clip_text = true
icon_align = 1

[node name="B" type="Button" parent="."]
margin_left = 96.0
margin_top = 152.0
margin_right = 544.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 2 )
text = "B) "
icon_align = 1

[node name="C" type="Button" parent="."]
margin_left = 96.0
margin_top = 192.0
margin_right = 544.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 2 )
text = "C) "
icon_align = 1

[node name="D" type="Button" parent="."]
margin_left = 96.0
margin_top = 232.0
margin_right = 544.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 2 )
text = "D) "
icon_align = 1

[node name="Dogru" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 320, 112 )
stream = ExtResource( 4 )

[node name="Yanlis" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 320, 112 )
stream = ExtResource( 5 )

[node name="Geri" type="Button" parent="."]
margin_left = 16.0
margin_top = 280.0
margin_right = 80.0
margin_bottom = 308.0
custom_fonts/font = SubResource( 7 )
icon = ExtResource( 6 )
icon_align = 1

[node name="Degistir" type="Button" parent="."]
margin_left = 536.0
margin_top = 280.0
margin_right = 626.0
margin_bottom = 308.0
custom_colors/font_color_disabled = Color( 0.494118, 1, 0, 1 )
custom_colors/font_color_focus = Color( 0.494118, 1, 0, 1 )
custom_colors/font_color = Color( 0.494118, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.494118, 1, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Osmanlıca"
icon_align = 1

[node name="BilmeAnimasyon" type="AnimationPlayer" parent="."]
anims/Dogru = SubResource( 4 )
anims/Yanlis = SubResource( 6 )

[connection signal="pressed" from="A" to="." method="_on_A_pressed"]
[connection signal="pressed" from="B" to="." method="_on_B_pressed"]
[connection signal="pressed" from="C" to="." method="_on_C_pressed"]
[connection signal="pressed" from="D" to="." method="_on_D_pressed"]
[connection signal="pressed" from="Geri" to="." method="_on_Geri_pressed"]
[connection signal="pressed" from="Degistir" to="." method="_on_Degistir_pressed"]
